# agentic-devops-poc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agentic-devops.yml  reusable-agentic-release-review.yml  team-scaling-demo.yml
docs/: agentic-devops-architecture.md  agentic-devops-full-article.docx  agentic-devops-full-article.md  foundry-agent-instructions.md  scaling-agentic-devops-across-teams.md  screenshot-runbook.md
schemas/: release-evidence.schema.json
scripts/: agentic_release_review.py  create_release_evidence.py
src/agentic_devops_poc/: __init__.py  app.py  release_policy.py
tests/: test_release_policy.py
