[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-devops-poc"
version = "0.1.0"
description = "Proof of concept for Agentic DevOps with CI/CD orchestration and human approval gates."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
